haqumei/src/generated/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

/// `*_fprint` 系が受け取る `FILE*` のための不透明型。
/// 実体を作らずポインタとしてのみ扱うため、中身は持たない。
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct FILE {
    _data: [u8; 0],
    _marker: core::marker::PhantomData<(*mut u8, core::marker::PhantomPinned)>,
}

#[doc = " DictionaryInfo structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mecab_dictionary_info_t {
    #[doc = " filename of dictionary\n On Windows, filename is stored in UTF-8 encoding"]
    pub filename: *const ::std::os::raw::c_char,
    #[doc = " character set of the dictionary. e.g., \"SHIFT-JIS\", \"UTF-8\""]
    pub charset: *const ::std::os::raw::c_char,
    #[doc = " How many words are registered in this dictionary."]
    pub size: ::std::os::raw::c_uint,
    #[doc = " dictionary type\n this value should be MECAB_USR_DIC, MECAB_SYS_DIC, or MECAB_UNK_DIC."]
    pub type_: ::std::os::raw::c_int,
    #[doc = " left attributes size"]
    pub lsize: ::std::os::raw::c_uint,
    #[doc = " right attributes size"]
    pub rsize: ::std::os::raw::c_uint,
    #[doc = " version of this dictionary"]
    pub version: ::std::os::raw::c_ushort,
    #[doc = " pointer to the next dictionary info."]
    pub next: *mut mecab_dictionary_info_t,
}
#[doc = " Path structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mecab_path_t {
    #[doc = " pointer to the right node"]
    pub rnode: *mut mecab_node_t,
    #[doc = " pointer to the next right path"]
    pub rnext: *mut mecab_path_t,
    #[doc = " pointer to the left node"]
    pub lnode: *mut mecab_node_t,
    #[doc = " pointer to the next left path"]
    pub lnext: *mut mecab_path_t,
    #[doc = " local cost"]
    pub cost: ::std::os::raw::c_int,
    #[doc = " marginal probability"]
    pub prob: f32,
}
#[doc = " Node structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mecab_node_t {
    #[doc = " pointer to the previous node."]
    pub prev: *mut mecab_node_t,
    #[doc = " pointer to the next node."]
    pub next: *mut mecab_node_t,
    #[doc = " pointer to the node which ends at the same position."]
    pub enext: *mut mecab_node_t,
    #[doc = " pointer to the node which starts at the same position."]
    pub bnext: *mut mecab_node_t,
    #[doc = " pointer to the right path.\n this value is NULL if MECAB_ONE_BEST mode."]
    pub rpath: *mut mecab_path_t,
    #[doc = " pointer to the right path.\n this value is NULL if MECAB_ONE_BEST mode."]
    pub lpath: *mut mecab_path_t,
    #[doc = " surface string.\n this value is not 0 terminated.\n You can get the length with length/rlength members."]
    pub surface: *const ::std::os::raw::c_char,
    #[doc = " feature string"]
    pub feature: *const ::std::os::raw::c_char,
    #[doc = " unique node id"]
    pub id: ::std::os::raw::c_uint,
    #[doc = " length of the surface form."]
    pub length: ::std::os::raw::c_ushort,
    #[doc = " length of the surface form including white space before the morph."]
    pub rlength: ::std::os::raw::c_ushort,
    #[doc = " right attribute id"]
    pub rcAttr: ::std::os::raw::c_ushort,
    #[doc = " left attribute id"]
    pub lcAttr: ::std::os::raw::c_ushort,
    #[doc = " unique part of speech id. This value is defined in \"pos.def\" file."]
    pub posid: ::std::os::raw::c_ushort,
    #[doc = " character type"]
    pub char_type: ::std::os::raw::c_uchar,
    #[doc = " status of this model.\n This value is MECAB_NOR_NODE, MECAB_UNK_NODE, MECAB_BOS_NODE, MECAB_EOS_NODE, or MECAB_EON_NODE."]
    pub stat: ::std::os::raw::c_uchar,
    #[doc = " set 1 if this node is best node."]
    pub isbest: ::std::os::raw::c_uchar,
    #[doc = " dictionary index in tokenizer load order.\n 0 is the system dictionary, 1..N identify user dictionaries in the order\n supplied by --userdic, and MECAB_NO_DICTIONARY_INDEX identifies a\n non-dictionary control or unknown node."]
    pub dictionary_index: ::std::os::raw::c_uchar,
    #[doc = " forward accumulative log summation.\n This value is only available when MECAB_MARGINAL_PROB is passed."]
    pub alpha: f32,
    #[doc = " backward accumulative log summation.\n This value is only available when MECAB_MARGINAL_PROB is passed."]
    pub beta: f32,
    #[doc = " marginal probability.\n This value is only available when MECAB_MARGINAL_PROB is passed."]
    pub prob: f32,
    #[doc = " word cost."]
    pub wcost: ::std::os::raw::c_short,
    #[doc = " best accumulative cost from bos node to this node."]
    pub cost: ::std::os::raw::c_long,
}
#[doc = " Normal node defined in the dictionary."]
pub const MECAB_NOR_NODE: _bindgen_ty_1 = 0;
#[doc = " Unknown node not defined in the dictionary."]
pub const MECAB_UNK_NODE: _bindgen_ty_1 = 1;
#[doc = " Virtual node representing a beginning of the sentence."]
pub const MECAB_BOS_NODE: _bindgen_ty_1 = 2;
#[doc = " Virtual node representing a end of the sentence."]
pub const MECAB_EOS_NODE: _bindgen_ty_1 = 3;
#[doc = " Virtual node representing a end of the N-best enumeration."]
pub const MECAB_EON_NODE: _bindgen_ty_1 = 4;
#[doc = " Parameters for MeCab::Node::stat"]
pub type _bindgen_ty_1 = ::std::os::raw::c_uint;
pub const MECAB_NO_DICTIONARY_INDEX: _bindgen_ty_2 = 255;
#[doc = " Dictionary provenance assigned to nodes not read from a dictionary."]
pub type _bindgen_ty_2 = ::std::os::raw::c_uint;
#[doc = " This is a system dictionary."]
pub const MECAB_SYS_DIC: _bindgen_ty_3 = 0;
#[doc = " This is a user dictionary."]
pub const MECAB_USR_DIC: _bindgen_ty_3 = 1;
#[doc = " This is a unknown word dictionary."]
pub const MECAB_UNK_DIC: _bindgen_ty_3 = 2;
#[doc = " Parameters for MeCab::DictionaryInfo::type"]
pub type _bindgen_ty_3 = ::std::os::raw::c_uint;
#[doc = " One best result is obtained (default mode)"]
pub const MECAB_ONE_BEST: _bindgen_ty_4 = 1;
#[doc = " Set this flag if you want to obtain N best results."]
pub const MECAB_NBEST: _bindgen_ty_4 = 2;
#[doc = " Set this flag if you want to enable a partial parsing mode.\n When this flag is set, the input |sentence| needs to be written\n in partial parsing format."]
pub const MECAB_PARTIAL: _bindgen_ty_4 = 4;
#[doc = " Set this flag if you want to obtain marginal probabilities.\n Marginal probability is set in MeCab::Node::prob.\n The parsing speed will get 3-5 times slower than the default mode."]
pub const MECAB_MARGINAL_PROB: _bindgen_ty_4 = 8;
#[doc = " Set this flag if you want to obtain alternative results.\n Not implemented."]
pub const MECAB_ALTERNATIVE: _bindgen_ty_4 = 16;
#[doc = " When this flag is set, the result linked-list (Node::next/prev)\n traverses all nodes in the lattice."]
pub const MECAB_ALL_MORPHS: _bindgen_ty_4 = 32;
#[doc = " When this flag is set, tagger internally copies the body of passed\n sentence into internal buffer."]
pub const MECAB_ALLOCATE_SENTENCE: _bindgen_ty_4 = 64;
#[doc = " Parameters for MeCab::Lattice::request_type"]
pub type _bindgen_ty_4 = ::std::os::raw::c_uint;
#[doc = " The token boundary is not specified."]
pub const MECAB_ANY_BOUNDARY: _bindgen_ty_5 = 0;
#[doc = " The position is a strong token boundary."]
pub const MECAB_TOKEN_BOUNDARY: _bindgen_ty_5 = 1;
#[doc = " The position is not a token boundary."]
pub const MECAB_INSIDE_TOKEN: _bindgen_ty_5 = 2;
#[doc = " Parameters for MeCab::Lattice::boundary_constraint_type"]
pub type _bindgen_ty_5 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mecab_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mecab_model_t {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mecab_lattice_t {
    _unused: [u8; 0],
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::create(argc, argv)"]
    pub fn mecab_new(
        argc: ::std::os::raw::c_int,
        argv: *mut *mut ::std::os::raw::c_char,
    ) -> *mut mecab_t;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::create(arg)"]
    pub fn mecab_new2(arg: *const ::std::os::raw::c_char) -> *mut mecab_t;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::version()"]
    pub fn mecab_version() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::getLastError()"]
    pub fn mecab_strerror(mecab: *mut mecab_t) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::deleteTagger(tagger)"]
    pub fn mecab_destroy(mecab: *mut mecab_t);
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger:set_partial()"]
    pub fn mecab_get_partial(mecab: *mut mecab_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::partial()"]
    pub fn mecab_set_partial(mecab: *mut mecab_t, partial: ::std::os::raw::c_int);
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::theta()"]
    pub fn mecab_get_theta(mecab: *mut mecab_t) -> f32;
}
unsafe extern "C" {
    #[doc = " C wrapper of  MeCab::Tagger::set_theta()"]
    pub fn mecab_set_theta(mecab: *mut mecab_t, theta: f32);
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::lattice_level()"]
    pub fn mecab_get_lattice_level(mecab: *mut mecab_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::set_lattice_level()"]
    pub fn mecab_set_lattice_level(mecab: *mut mecab_t, level: ::std::os::raw::c_int);
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::all_morphs()"]
    pub fn mecab_get_all_morphs(mecab: *mut mecab_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::set_all_moprhs()"]
    pub fn mecab_set_all_morphs(mecab: *mut mecab_t, all_morphs: ::std::os::raw::c_int);
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::parse(MeCab::Lattice *lattice)"]
    pub fn mecab_parse_lattice(
        mecab: *mut mecab_t,
        lattice: *mut mecab_lattice_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " Rebuild one-best path from existing lattice nodes."]
    pub fn mecab_lattice_rebuild_best(
        mecab: *mut mecab_t,
        lattice: *mut mecab_lattice_t,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::parse(const char *str)"]
    pub fn mecab_sparse_tostr(
        mecab: *mut mecab_t,
        str_: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::parse(const char *str, size_t len)"]
    pub fn mecab_sparse_tostr2(
        mecab: *mut mecab_t,
        str_: *const ::std::os::raw::c_char,
        len: usize,
    ) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::parse(const char *str, char *ostr, size_t olen)"]
    pub fn mecab_sparse_tostr3(
        mecab: *mut mecab_t,
        str_: *const ::std::os::raw::c_char,
        len: usize,
        ostr: *mut ::std::os::raw::c_char,
        olen: usize,
    ) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::parseToNode(const char *str)"]
    pub fn mecab_sparse_tonode(
        mecab: *mut mecab_t,
        arg1: *const ::std::os::raw::c_char,
    ) -> *const mecab_node_t;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::parseToNode(const char *str, size_t len)"]
    pub fn mecab_sparse_tonode2(
        mecab: *mut mecab_t,
        arg1: *const ::std::os::raw::c_char,
        arg2: usize,
    ) -> *const mecab_node_t;
}
unsafe extern "C" {
    #[doc = " C wrapper of MeCab::Tagger::parseNBest(size_t N, const char *str)"]
    pub fn mecab_nbest_sparse_tostr(
        mecab: *mut mecab_t,
        N: usize,
        str_: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
